<resources>
    <string name="app_name">TourGuide: Wroclaw</string>
    <string name="category_text_view_places">Places</string>
    <string name="category_text_view_museums">Museums</string>
    <string name="category_text_view_about">About</string>
    <string name="category_text_view_parks">Parks</string>
    <string name="wroclaw_about">A city in southwestern Poland, the seat of the authorities of Lower Silesia and Wroclaw. It is located in Central Europe on the Silesian Plain, on the Oder River and on its four tributaries. It is the historical capital of Lower Silesia, as well as the whole of Silesia. It is the main city of the agglomeration of Wroclaw. Fourth largest city in Poland - 637,683 inhabitants, fifth in terms of area - 292,82 km².</string>
    <string name="poland_text_view">Poland</string>
    <string name="wroclaw_text_view">Wroclaw</string>
    <string name="centennial_hall_text_view">Centennial Hall</string>
    <string name="university_of_wroclaw_text_view">University of Wroclaw</string>
    <string name="market_text_view">Market</string>
    <string name="ostrow_tumski_text_view">Ostrów Tumski</string>
    <string name="panorama_raclawicka_text_view">Panorama Racławicka</string>
    <string name="info_centennial_hall_text_view">Wystawowa 1, phone: 071 347-51-00, open: 9 - 16 www.halaludowa.wroc.pl e-mail: zarzad@halaludowa.wroc.pl</string>
    <string name="description_centennial_hall_text_view">Centennial Hall was recognised as one of the greatest architectonic achievements of the 20th century. It was designed to serve the citizens of Wrocław and the guests visiting the capital of Lower Silesia.The monumental building was opened in 1913 on the 100th anniversary of the Battle of Leipzig, won by the anti-French coalition against Napoleon Bonaparte. On this occasion, Wrocław hosted the Centennial Exhibition. Max Berg, the then city architect, designed a massive exhibition hall built with the use of the novel reinforced concrete technology. The dome of the Hall spans 65m and the building is 42m high. The main hall is surrounded by the corridors. It can fit 10 thousand people.The multifunctional space, unconventional construction, interesting and spacious location are only a few of the Halls assets. The Centennial Hall (Hala Stulecia) is currently one of the most wanted places to organise exhibitions, conferences, congresses, cultural and sporting events from Poland and from abroad.Its significance raised considerably in 2006 when the Hall became a part of UNESCO World Heritage List.</string>
    <string name="description_market_text_view">The Rynek of Wrocaw has 3.8ha of surface and belongs to the biggest market places in Poland (the bigger ones are in Kraków and Olecko).Rynek of Wrocław has 3.8ha of surface and belongs to the biggest market places in Poland (the bigger ones are in Kraków and Olecko). However, the Late Gothic Town Hall with its 66m tower is the biggest building of this kind in Poland.  In its underground functions Piwnica Świdnicka, one of the oldest restaurants in Europe.The edifice of the New Town Hall was built in the 19th century. This is where the authorities and the President have their offices. The old Town Hall belongs to the City Museum.Rynek is surrounded by the tenement houses funded by the patricians of Wrocław. The original building, stylistically different from the rest, is a modernist high rise built to the design of Heinrich Rump in 1930.After World War II Rynek went through several changes. In 1956 the statue of Aleksander Fredro was moved from Lvov. In the 70s the tram tracks were closed, the car traffic was heavily limited (the old petrol station was dismantled). The whipping post, destroyed during the war was restored to its original place.In 2000 a fountain was installed on Gołębi Square, in the western part of Rynek, and was called Zdrój from the name of the then President of Wrocław, Bogdan Zdrojewski.The whipping post, the fountain and Fredro´s statue are the most popular orientation and meeting points in Rynek. Another interesting spot are Jaś i Małgosia (Hansel and Gretel), two tenement houses of the altarists (guardians of the altar in St. Elizabeth church) in the north-western part of Rynek.Rynek is also a place of Chirstmas Fairs, New Year’s Eve celebrations, religious, academic and military events. In 2012 Rynek was a big EURO fan zone, gathering as much as 30 thousand people.</string>
    <string name="info_university_of_wroclaw_text_view">Muzeum Uniwersytetu Wrocławskiego pl. Uniwersytecki 1 (gmach Uniwersytetu) phone: 71 375-22-45, 71 375 26 18 e-mail: muzeum@adm.uni.wroc.pl open: 10 -15:30</string>
    <string name="description_university_of_wroclaw_text_view">The Museum is a historical museum and its collections are mainly devoted to the history of the University - from the 15th century to the present. The oldest collections have the registers of Academy Leopoldina but the majority comes from the years after 1811. The Museum (Muzeum Uniwersytetu Wrocławskiego) is situated in the main Baroque building of the Univeristy, designed by Christoph Tausch. It is a historical museum and its collections are mainly devoted to the history of the University - from the 15th century to the present. The oldest collections have the registers of Academy Leopoldina but the majority comes from the years after 1811.</string>
    <string name="description_the_four_d_d_text_view">The Four Denominations District (Dzielnica Czterech Świątyń) is located in the centre of Wrocław, right next to Rynek. It consists of the area between the streets Kazimierza Wielkiego, Św. Mikołaja, Pawła Włodkowica and Św. Antoniego. It is not a regular, urban district but the unique atmosphere of the place caused that since 1995 it has been called Four Temples District, Four Denominations or Mutual Respect District. Its unique character derives from wonderful sacral architecture. In 300m, close to each other there are: Orthodox church of Nativity of Theotokos, church of St. Anthony of Padua - a Roman Catholic temple, Synagogue pod Białym Bocianem and an Evangelical church of Divine Providence. In 1996 the Council of the Mutual Respect District was created in order to encourage cooperation between the religions. In 2005 the temples were connected with a “cultural route” and the area between them was included in the urban development plan. The District is considered a historical monument. On 29 November 2012 on the corner of the streets Kazimierza Wielkiego and Św. Antoniego the Cristal Planet statue was exhibited. The sculpture created by Ewa Rossano, an artist from Wrocław, became another symbol of the District. The Four Denominations District hosts many cultural and educational events. The Synagogue is a place of special meaning. It hosts many artistic events, every summer there are concerts and exhibitions organised under the name “Summer in The White Stroke Synagogue”. A similar function has the nearby cinema Nowe Horyzonty. It is the first cinema in Poland devoted to artistic films and hosts the most important film festivals in Wrocław. New Horizon Festival and American Film Festival became popular not only among Polish audience but also abroad. Multiple restaurants, cafés, pubs and music clubs situated in the Four Denominations District (for example in the beautiful patio of the Synagogue, surrounded by old walls) make it one of the most magical meeting place in Wrocław.</string>
    <string name="description_henryk_tomaszewski_t_m">The patron of the first Theatre Museum in Poland is Henryk Tomaszewski. This outstanding actor and director was the founder and many years’ director of the Wrocław Pantomime Theatre. Tomaszewski’s and Grotowski’s theatres functioning in Wrocław were top world-class brands. The Theatre Museum is a branch of the Wrocław City Museum. The new museum tells the story of a pantomime and the entire theatre life of Wrocław through permanent and temporary exhibitions, an elaborate and original educational programme combining theoretical and practical activities, meetings, presentations and workshops that will lift the veil of theatre secrets in an unconventional manner. The Theatre Museum is situated near the National Forum of Music. Beside the entrance to the building, the remaining part of the southern wing of the royal palace, there is a bronze sculpture based on Theodor von Gosen’s design presenting the face of Orpheus – a mythical singer.</string>
    <string name="henryk_tomaszewski_theatre_museum_text_view">Henryk Tomaszewski Theatre Museum</string>
    <string name="info_henryk_tomaszewski_theatre_museum_text_view">pl. Wolności 7, Wrocław</string>
    <string name="description_pan_tadeusz_text_view">The museum presents both permanent exhibitions and an extensive programme of exhibitions and innovative educational activities. The manuscript of the masterpiece by Adam Mickiewicz is not the only attraction. Organized around it is all the remaining 17 topical permanent exhibition rooms, housing 200 historic exhibits, 100 games, applications and animations. There are, among others, rooms devoted to traditional Polish customs - the official, public ones, including government offices and hunting, as well as private, with the culture of home and the table. The museum offers a well designed multimedia exhibition, including the Oculus technology. Thanks to special eyepieces, it allows experiencing a virtual journey in space, mapping of the walls of the museum courtyard, and finally, offers an avatar, which is used for educational activities for children. The well designed corridor (imitating inscription-covered walls from the communist times) will lead us out of the room Powidoki (Afterimages) to the Hall of Witness to History, Władysław Bartoszewski and Jan Nowak-Jeziorański, former director of the Radio Free Europe. Many facilities were also prepared for the visually and hearing impaired, as well as wheelchair users.</string>
    <string name="info_pan_tadeusz_text_view">Rynek 6, 50-117 Wrocław pantadeusz.ossolineum.pl, info@ossolineum.pl phone: +48 717 55 06 00</string>
    <string name="pan_tadeusz_text_view">Pan Tadeusz Museum</string>
    <string name="royal_palace_text_view">Royal Palace</string>
    <string name="info_royal_palace_text_view">Kazimierza Wielkiego 35, 50-077 Wrocław muzeum.miejskie.wroclaw.pl, kasa@mmw.pl phone: +48 713 91 69 40 phone: +48713916941</string>
    <string name="description_royal_palace_text_view">From 2009 the palace is the main building of the City Museum of Wrocław and presents, among others the exhibition “1000 years of Wrocław”. The Royal Palace (Pałac Królewski) was called Spaetgen’s Palace, from the name of one of the first owners. In 1717 baron Heinrich G. Spaetgen bought a small baroque mansion close to Rynek. After his death in 1750, a Prussian King Frederick II bought the palace. It became a royal mansion, and Wrocław joined Berlin and Königsberg (today’s Kaliningrad) as a residence city. The next Prussian kings extended the palace, changed its design and character. In the middle of the 19th century the palace extended itself from Wolności Square to Kazimierza Wielkiego Street. After the fall of the empire the palace was taken by the city authorities, in the 20s the Palace Museum was opened. During Wolrd War II the building was seriously damaged.</string>
    <string name="the_four_denominations_district_text_view">The Four Denominations District</string>
    <string name="category_text_view_statues">Statues</string>
</resources>