<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_wroclaw2"
    android:orientation="vertical"
    android:padding="@dimen/padding_linear_layout_category"
    tools:context="com.example.android.tourguide.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/padding_bottom_image_viwe_icon_local"
        android:paddingTop="@dimen/padding_top_image_viwe_icon_local"
        android:src="@drawable/icon_local" />

    <TextView
        style="@style/TitleSubCategory"
        android:text="@string/wroclaw_text_view" />

    <TextView
        style="@style/SubTitleSubCategory"
        android:text="@string/poland_text_view" />

    <View style="@style/ViewStyle" />

    <TextView
        android:id="@+id/About_text_view"
        style="@style/CategoryStyle"
        android:text="@string/category_text_view_about" />

    <TextView
        android:id="@+id/Statues_text_view"
        style="@style/CategoryStyle"
        android:text="@string/category_text_view_statues" />

    <TextView
        android:id="@+id/Places_text_view"
        style="@style/CategoryStyle"
        android:text="@string/category_text_view_places" />

    <TextView
        android:id="@+id/Museums_text_view"
        style="@style/CategoryStyle"
        android:text="@string/category_text_view_museums" />

    <TextView
        android:id="@+id/Parks_text_view"
        style="@style/CategoryStyle"
        android:text="@string/category_text_view_parks" />
</LinearLayout>



