<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/LinearLayoutSubCategory">

        <ImageView
            style="@style/SubCategoryImageView"
            android:src="@drawable/image_pan_tadeusz" />

        <TextView
            style="@style/TitleSubCategory"
            android:text="@string/pan_tadeusz_text_view" />

        <TextView
            style="@style/SubTitleSubCategory"
            android:text="@string/info_pan_tadeusz_text_view" />

        <View style="@style/ViewStyle" />

        <TextView
            style="@style/EssencSubCategory"
            android:text="@string/description_pan_tadeusz_text_view" />
    </LinearLayout>
</ScrollView>