<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_wroc3"
    android:orientation="vertical"
    android:padding="@dimen/padding_linear_layout_category">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/padding_bottom_imave_view_icon_about"
        android:paddingTop="@dimen/padding_top_imave_view_icon_about"
        android:src="@drawable/icon_about" />

    <TextView
        style="@style/TitleSubCategory"
        android:text="@string/wroclaw_text_view" />

    <TextView
        style="@style/SubTitleSubCategory"
        android:text="@string/poland_text_view" />

    <View style="@style/ViewStyle" />

    <TextView
        style="@style/EssencSubCategory"
        android:text="@string/wroclaw_about" />
</LinearLayout>
